--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "class-validator": "^0.14.0",
     "env-var": "^7.3.1",
     "express": "^4.18.2",
+    "express-openid-connect": "^2.16.0",
     "firebase-admin": "^11.9.0",
+    "http-status-codes": "^2.2.0",
     "inversify": "^6.0.1",
     "lodash": "^4.17.21",
     "migrate": "^2.0.0",
