--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,7 @@
       "name": "Run npm start",
       "request": "launch",
       "type": "node-terminal",
-      "preLaunchTask": "npm: build"
+      "preLaunchTask": "npm: copy-files"
     }
   ]
 }
