--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc",
     "start": "node ./dist/index.js",
+    "copy-files": "cp src/config/*.yaml dist/config",
     "start:debug": "node --inspect=0.0.0.0 ./dist/app.js",
     "migrate:create": "migrate create --migrations-dir=./src/migrations/files --template-file ./src/migrations/utils/template.ts",
     "migrate:up": "migrate up --migrations-dir=./dist/migrations/files --matches=*.js --store=./dist/migrations/utils/storage.js"
@@ -21,10 +22,13 @@
   "dependencies": {
     "@types/express": "^4.17.17",
     "@types/mongoose": "^5.11.97",
+    "@types/swagger-ui-express": "^4.1.3",
     "amqplib": "^0.10.3",
     "class-validator": "^0.14.0",
+    "copy-files": "^0.1.0",
     "env-var": "^7.3.1",
     "express": "^4.18.2",
+    "express-oauth2-jwt-bearer": "^1.5.0",
     "express-openid-connect": "^2.16.0",
     "firebase-admin": "^11.9.0",
     "http-status-codes": "^2.2.0",
@@ -37,7 +41,9 @@
     "mongoose": "^7.3.0",
     "reflect-metadata": "^0.1.13",
     "swagger-ui": "^5.1.0",
-    "typescript": "^5.0.4"
+    "swagger-ui-express": "^5.0.0",
+    "typescript": "^5.0.4",
+    "yaml": "^2.3.1"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.59.5",
