--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/mongoose": "^5.11.97",
     "@types/swagger-ui-express": "^4.1.3",
     "amqplib": "^0.10.3",
+    "body-parser": "^1.20.2",
     "class-validator": "^0.14.0",
     "copy-files": "^0.1.0",
     "env-var": "^7.3.1",
