--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "copy-files": "^0.1.0",
     "env-var": "^7.3.1",
     "express": "^4.18.2",
+    "express-async-errors": "^3.1.1",
     "express-oauth2-jwt-bearer": "^1.5.0",
     "express-openid-connect": "^2.16.0",
     "firebase-admin": "^11.9.0",
