--- a/package.json
+++ b/package.json
@@ -20,12 +20,14 @@
   "author": "tuan nguyen <denny.truongnguyen@gmail.com>",
   "license": "ISC",
   "dependencies": {
+    "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/swagger-ui-express": "^4.1.3",
     "amqplib": "^0.10.3",
     "body-parser": "^1.20.2",
     "class-validator": "^0.14.0",
     "copy-files": "^0.1.0",
+    "cors": "^2.8.5",
     "env-var": "^7.3.1",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
